--- a/composer.json
+++ b/composer.json
@@ -12,13 +12,24 @@
     ],
     "require": {
         "php": "^7.1.3",
-        "symfony/form": "^5.0",
-        "symfony/framework-bundle": "^5.0",
-        "symfony/validator": "^5.0"
+        "symfony/form": "^4.4|^5.0",
+        "symfony/framework-bundle": "^4.4|^5.0",
+        "symfony/validator": "^4.4|^5.0"
     },
     "autoload": {
         "psr-4": {
             "Nzo\\HoneypotBundle\\": ""
         }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Nzo\\HoneypotBundle\\Tests\\": "/tests/"
+        }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^4.8 || ^5.0"
+    },
+    "config": {
+        "sort-packages": true
     }
 }
